erDiagram
    User {
        int id PK
        string email
        string phone_number
        string first_name
        string last_name
        string slug_name
        boolean is_banned
        string photo_url
        string password
    }
    Branch {
        int id PK
        string name
        float latitude
        float longitude
        string location_url
        float radius
        int branch_manager_id FK
    }
    Coordinator {
        int id PK
        int user_id FK
        int branch_id FK
    }
    Track {
        int id PK
        string name
        int supervisor_id FK
        int intake
        date start_date
        boolean is_active
        string description
        int default_branch_id FK
        string program_type
    }
    Event {
        int id PK
        string description
        string audience_type
        boolean is_mandatory
        datetime created_at
        datetime updated_at
    }
    Schedule {
        int id PK
        int track_id FK
        string name
        date created_at
        int custom_branch_id FK
        boolean is_shared
        int event_id FK
    }
    Session {
        int id PK
        int schedule_id FK
        string title
        string instructor
        datetime start_time
        datetime end_time
        string session_type
        string room
    }
    Student {
        int id PK
        int user_id FK
        int track_id FK
        string phone_uuid
        string laptop_uuid
        boolean is_checked_in
    }
    AttendanceRecord {
        int id PK
        int student_id FK
        int schedule_id FK
        datetime check_in_time
        datetime check_out_time
        string status
    }
    PermissionRequest {
        int id PK
        int student_id FK
        string request_type
        string reason
        string status
        int schedule_id FK
        datetime adjusted_time
        datetime created_at
        datetime updated_at
    }
    Guest {
        int id PK
        int user_id FK
        date date_of_birth
        string national_id
        string college_name
        string university_name
        date gradyear
        string degree_level
    }
    EventAttendanceRecord {
        int id PK
        int schedule_id FK
        int student_id FK
        int guest_id FK
        datetime check_in_time
        datetime check_out_time
        string status
        datetime created_at
        datetime updated_at
    }
    LostItem {
        int item_id PK
        string name
        string description
        string status
        string place
        datetime lost_at
        string image
        int user_id FK
    }
    FoundItem {
        int item_id PK
        string name
        string description
        string status
        string place
        datetime found_at
        string image
        int user_id FK
    }
    MatchedItem {
        int match_id PK
        int lost_item_id FK
        int found_item_id FK
        float similarity_score
        datetime created_at
        datetime confirmed_at
        string status
    }
    Notification {
        int id PK
        int user_id FK
        string message
        boolean is_read
        datetime created_at
        int matched_item_id FK
    }

    %% Relationships
    User ||--o{ Track : "supervises"
    User ||--o{ LostItem : "loses"
    User ||--o{ FoundItem : "finds"
    User ||--o{ Notification : "receives"
    User ||--|| Student : "is"
    User ||--|| Guest : "is"
    User ||--|| Coordinator : "is"
    Branch ||--|| User : "branch_manager"
    Branch ||--o{ Coordinator : "has"
    Track ||--o{ Student : "enrolls"
    Track ||--o{ Session : "has"
    Track ||--|| Branch : "default"
    Track }o--o{ Event : "target"
    Schedule ||--|{ Session : "has"
    Schedule ||--o{ AttendanceRecord : "for"
    Schedule ||--o{ PermissionRequest : "for"
    Schedule }o--o| Track : "belongs to"
    Schedule }o--o| Branch : "custom"
    Student ||--o{ AttendanceRecord : "has"
    Student ||--o{ PermissionRequest : "requests"
    Event |o--|| Schedule : "has"
    EventAttendanceRecord ||--o{ Schedule : "for"
    EventAttendanceRecord ||--o{ Student : "for"
    EventAttendanceRecord ||--o{ Guest : "for"
    LostItem ||--o{ MatchedItem : "matched"
    FoundItem ||--o{ MatchedItem : "matched"
    Notification }o--|| MatchedItem : "about"